<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FAITH</string>
    <string name="string_avatar_name">Name</string>
    <string name="frag_avatar_lbl_name">Hoe heet je?</string>
    <string name="naam_hint" tools:ignore="Typos">Hier kan je je naam zetten</string>
    <string name="choose_black">Kies zwart</string>
    <string name="choose_blue">Kies blauw</string>
    <string name="choose_red">Kies rood</string>
    <string name="choose_yellow">Kies geel</string>
    <string name="choose_green">Kies groen</string>
    <string name="lineWidth_thin">Dun</string>
    <string name="lineWidth_medium">Middel</string>
    <string name="lineWidth_Thick">Dik</string>
    <string name="undo">Ongedaan maken</string>
    <string name="frag_main_descr_city_plan">Stadsplan</string>
    <string name="frag_main_descr_your_avatar">Je avatar</string>
    <string name="frag_avatar_title">Kies je avatar</string>
    <string name="frag_avatar_pick_avatar">Kies een avatar</string>
    <string name="frag_avatar_pick_backpack">Kies een rugzak</string>
    <string name="frag_avatar_lbl_to_town">Ga naar de stad</string>
    <string name="city_plan">Stadsplan</string>
    <string name="your_avatar">Je avatar</string>
    <string name="event_details_title">Wat is er gebeurd?</string>
    <string name="event_details_label_title">Geef titel in:</string>
    <string name="permission_record_audio">Je moet je toestemming geven om geluid op te nemen</string>
    <string name="error_saving_drawing">Er gebeurde een fout tijdens het opslaan van je afbeelding.</string>
    <string name="description_start_recording">Start opname</string>
    <string name="description_restart_recording">Herstart opname</string>
    <string name="description_stop_recording">Stop opname</string>
    <string name="description_pause_recording">Pauzeer opname</string>
    <string name="lbl_detail_name">Naam:</string>
    <string name="hint_audio_recording_name">Een naam voor deze opname</string>
    <string name="save">Opslaan</string>
    <string name="save_film_error">Er ging iets fout bij het opslaan van je film.</string>
    <string name="encode_film_error">Er ging iets fout bij het aanmaken van je film.</string>
    <string name="save_film_success">Je film werd opgeslagen</string>
    <string name="save_audio_success">Je opname werd opgeslagen</string>
    <string name="save_drawing_success">Je tekening werd opgeslagen</string>
    <string name="save_photo_success">Je foto werd opgeslagen</string>
    <string name="save_event_success">Je gebeurtenis werd opgeslagen</string>
    <string name="error_load_events">Er ging iets fout bij het laden van je gebeurtenissen.</string>
    <string name="save_text_success">Je tekst werd opgeslagen</string>
    <string name="error_save_film_failed">Er ging iets fout bij het opslaan van je film</string>
    <string name="error_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
    <string name="error_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
    <string name="error_save_avatar_failed">Er ging iets fout bij het opslaan van je avatar</string>
    <string name="error_save_photo_failed">Er ging iets fout bij het opslaan van je foto</string>
    <string name="error_save_text_failed">Er ging iets fout bij het opslaan van je tekst</string>
    <string name="error_load_text_failed">Er ging iets fout bij het laden van je tekst</string>
    <string name="error_save_drawing_failed">Er ging iets fout bij het opslaan van je tekening</string>
    <string name="error_pause_not_supported">Pauzeren wordt door je apparaat niet ondersteund</string>
    <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
    <string name="frag_takePhoto_goToEmotionAvatar">Ga naar emotieavatar</string>
    <string name="frag_takePhoto_takePhoto">Neem foto</string>
    <string name="description_thumbnail">Miniatuur</string>
    <string name="description_addText">Schrijven</string>
    <string name="description_addPhoto">Foto maken</string>
    <string name="description_addAudio">Inspreken</string>
    <string name="description_addDrawing">Tekenen</string>
    <string name="error_save_photo">Er ging iets mis bij het opslaan van je foto.</string>
    <string name="hint_photo_name">een naam voor je foto</string>
    <string name="lbl_name">Naam:</string>
    <string name="lbl_save">Opslaan</string>
    <string name="toast_save_photo_failed">Er ging iets fout bij het opslaan van je foto.</string>
    <string name="terug_naar_de_stad">Terug naar de stad</string>
    <string name="nav_emotieregulatie">Emotieregulatie</string>
    <string name="nav_overzicht_gebeurtenissen">overzicht gebeurtenissen</string>
    <string name="navigation_terugNaarDeStad">Terug naar de stad</string>
    <string name="header_emotie_regulatie">Emotie regulatie</string>
    <string name="frag_viewEvent_notes">notes</string>
    <string name="dialog_to_the_event_title">Wil je teruggaan naar het park?</string>
    <string name="dialog_to_the_treasurechest_title">Wil je teruggaan naar het park?</string>
    <string name="dialog_to_the_cinema_title">Wil je teruggaan naar de cinema?</string>
    <string name="dialog_takePhoto_cancel_message">Ben je zeker? Je foto is nog niet opgeslagen!</string>
    <string name="dialog_enterText_cancel_message">Ben je zeker? Je tekst is nog niet opgeslagen!</string>
    <string name="dialog_to_the_event_message">Ben je zeker? Je tekening is nog niet opgeslagen!</string>
    <string name="dialog_to_restart_drawavatar_title">"Wil je opniew beginnen?</string>
    <string name="dialog_to_restart_drawavatar_message">Ben je zeker?</string>
    <string name="dialog_to_the_city_title">"Wil je teruggaan naar de stad?</string>
    <string name="dialog_to_the_city_message">Ben je zeker? Je gebeurtenis is nog niet opgeslagen!</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="txt_error_userNameOrAvatarNotSet">Vul je naam in en selecteer een avatar</string>
    <string name="error_save_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_register_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_event_no_title">Je moet een titel geven aan je werkje.</string>
    <string name="lbl_save_event_notes">Notities</string>
    <string name="lbl_save_event_date">Dag</string>
    <string name="lbl_save_event_title">Titel</string>
    <string name="lbl_back">Terug</string>
    <string name="lbl_activity_emotionCapture">Emotiecaptatie</string>
    <string name="lbl_activity_treasurechest">Schatkist</string>
    <string name="lbl_activity_city">De Stad</string>
    <string name="description_event_avatar">Getekende avatar voor de gebeurtenis</string>
    <string name="descr_city_park">Het stadspark</string>
    <string name="prompt_password">Wat is je wachtwoord?</string>
    <string name="action_sign_in_short">pwd</string>
    <string name="action_sign_in">log in</string>
    <string name="prompt_email">Wat is je email?</string>
    <string name="permission_rationale">Permissies?</string>
    <string name="error_field_required">verplicht</string>
    <string name="error_invalid_email">ongeldig email</string>
    <string name="error_invalid_password">ongeldig pwd</string>
    <string name="error_incorrect_password">ongeldig pwd</string>
    <string name="fontsize_small">klein</string>
    <string name="fontsize_normal">normaal</string>
    <string name="fontsize_large">groot</string>
    <string name="save_text_error_empty">Lege tekst kan je niet opslaan</string>
    <string name="descr_loginscreen">Loginscherm</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="login_error_noUsername">Je moet je gebruikersnaam ingeven!</string>
    <string name="login_error_noPassword">Je moet je wachtwoord ingeven!</string>
    <string name="registerOrLogin_password_empty">Je moet een wachtwoord ingeven van minstens 6 posities.</string>
    <string name="register_passwords_nomatch">Wachtwoorden niet gelijk</string>
    <string name="register_password_empty">Wachtwoord ingeven</string>
    <string name="register_error_create_user">Er ging iets fout bij het aanmaken van je nieuwe gebruiker.</string>
    <string name="getLoggedInUser_error">Er ging iets fout bij het ophalen van de gebruiker.</string>
    <string name="error_no_credentials">No credentials have been stored</string>
    <string name="msg_naar_de_stad">Naar de stad</string>
    <string name="msg_registreer">Ik ben nieuw</string>
    <string name="avatar_zittend">avatar zittend</string>
    <string name="avatar_inkleuren">avatar inkleuren</string>
    <string name="editor">editor</string>
    <string name="tekenen">tekenen</string>
    <string name="choose_underline">kies onderlijnd</string>
    <string name="choose_italic">kies cursief</string>
    <string name="choose_bold">kies vetjes</string>
    <string name="take_photo_de_foto">de foto</string>
    <string name="take_photo_neem_foto">neem foto</string>
    <string name="registerOrLogin_username_empty">Je gebruikersnaam mag niet leeg zijn.</string>
    <string name="register_username_empty">Gebruikersnaam invullen</string>
    <string name="register_avatar_mustSelect">Je moet nog een avatar selecteren.</string>
    <string name="cityScreen_logOut">Wil je uitloggen?</string>
    <string name="cityscreen_stad_verlaten">Wil je uitloggen en de stad verlaten?</string>
    <string name="com_auth0_client_id">VRX5hqPAdDhkj5DJJ9df4Q4SMZS06io9</string>
    <string name="com_auth0_domain">e-quality.eu.auth0.com</string>
    <string name="lbl_archive">Je archief</string>
    <string name="hint_choose_username">Kies een gebruikersnaam</string>
    <string name="description_arrow_right">Icon for arrow to the right</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="ex_title">Een geweldige dag</string>
    <string name="ex_date">07/11/2019</string>
    <string name="ex_beschrijving">Het was vooral voor rust heel sterk. Na rust zijn we wat meer ingezakt, maar kwamen we er gevaarlijk uit en hebben we ook goed voetbal laten zien. Zelf voelde ik me lekker en het is super dat ik er twee heb gemaakt. Ik was bij veel gevaarlijke momenten betrokken, ik voelde me echt lekker vandaag.</string>
    <string name="ex_labeltext">Afbeelding</string>
    <string name="register_error_weak_password">Wachtwoord moet bestaan uit minstens 6 karakters</string>
    <string name="bestand_toevoegen">Bestand\ntoevoegen</string>
    <string name="foto_nemen">Foto\nnemen</string>
    <string name="add_video">Youtube</string>
    <string name="filter_menu_background">Filter menu achtergrond</string>
    <string name="filter_menu_content">Filter menu inhoud</string>
    <string name="filter_boy">Filter jongen afbeelding</string>
    <string name="filter_btn_text">Filter knop tekst</string>
    <string name="filter_btn_audio">Filter knop audio</string>
    <string name="filter_btn_foto">Filter knop foto</string>
    <string name="filter_btn_drawing">Filter knop tekening</string>
    <string name="filter_btn_video">Filter knop video</string>
    <string name="filter_btn_file">Filter knop bestand</string>
    <string name="close_filter_btn">Knop sluit filter menu</string>
    <string name="recordaudio_record_description">Druk op de rode bol om\neen geluidsfragment op te nemen!</string>
    <string name="recordaudio_record">Opnemen</string>
    <string name="rv_btn_detail">Knop bekijk bestand</string>
    <string name="rv_detail_title">Detail Title</string>
    <string name="rv_btn_delete_skyscraper">Verwijder wolkenkrabber</string>
</resources>