<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/include"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_filter_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/filter_menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/filter_achtergrond" />

    <ImageView
        android:id="@+id/background_content_filter_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter_menu_content"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_filter_menu"
        app:layout_constraintEnd_toEndOf="@+id/background_filter_menu"
        app:layout_constraintStart_toStartOf="@+id/background_filter_menu"
        app:layout_constraintTop_toTopOf="@+id/background_filter_menu"
        app:srcCompat="@drawable/filter_inhoud" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guide_tablelayout_end"
        app:layout_constraintEnd_toEndOf="@+id/background_content_filter_menu"
        app:layout_constraintStart_toStartOf="@+id/background_content_filter_menu"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/filterknop_teksten"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"

                android:contentDescription="@string/filter_btn_text"
                app:srcCompat="@drawable/filterknop_teksten" />

            <ImageButton
                android:id="@+id/filterknop_audio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/filter_btn_audio"
                app:srcCompat="@drawable/filterknop_audio" />

            <ImageButton
                android:id="@+id/filterknop_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"

                android:contentDescription="@string/filter_btn_foto"
                app:srcCompat="@drawable/filterknop_foto" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/filterknop_tekeningen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"

                android:contentDescription="@string/filter_btn_drawing"
                app:srcCompat="@drawable/filterknop_tekeningen" />

            <ImageButton
                android:id="@+id/filterknop_film"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"

                android:contentDescription="@string/filter_btn_video"
                app:srcCompat="@drawable/filterknop_film" />

            <ImageButton
                android:id="@+id/filterknop_extern_bestand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"

                android:contentDescription="@string/filter_btn_file"
                app:srcCompat="@drawable/filterknop_extern_bestand" />
        </TableRow>
    </TableLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_searchbar_horizontal_start"
        android:layout_width="8dp"
        android:layout_height="12dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_searchbar_horizontal"
        android:layout_width="8dp"
        android:layout_height="12dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_tablelayout_end"
        android:layout_width="8dp"
        android:layout_height="12dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_close_button_vertical"
        android:layout_width="8dp"
        android:layout_height="12dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guide_searchbar_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/background_content_filter_menu"
        app:layout_constraintTop_toTopOf="@+id/guide_searchbar_horizontal_start" />

    <ImageButton
        android:id="@+id/search_close_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#0000FF"
        android:contentDescription="@string/close_filter_btn"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guide_searchbar_horizontal_start"
        app:layout_constraintEnd_toEndOf="@+id/background_content_filter_menu"
        app:layout_constraintStart_toStartOf="@+id/guide_close_button_vertical"
        app:layout_constraintTop_toTopOf="@+id/background_filter_menu"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/filter_boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter_boy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_content_filter_menu"
        app:layout_constraintStart_toStartOf="@+id/background_content_filter_menu"
        app:layout_constraintTop_toTopOf="@+id/guide_tablelayout_end"
        app:srcCompat="@drawable/filter_boy" />


</androidx.constraintlayout.widget.ConstraintLayout>