<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/skyscraper_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/rv_btn_detail"
                app:srcCompat="@drawable/event_detail_text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="17dp"
            android:animateLayoutChanges="true">

            <ImageButton
                android:id="@+id/btn_delete_skyscraper"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/rv_btn_delete_skyscraper"
                app:srcCompat="@drawable/ic_close_black" />

        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/text_skyscraper_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rv_detail_title"
        android:maxLength="30"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skyscraper_img" />
</LinearLayout>
