<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="drawViewModel"
            type="be.hogent.faith.faith.emotionCapture.drawing.DrawViewModel" />

        <import type="android.graphics.Color" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/panel_corner_radius">

        <LinearLayout
            android:id="@+id/linearLayoutColors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_draw_setColorBlack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@{((int)drawViewModel.selectedColor)==@color/black ? @drawable/background : @drawable/background_noborder}"
                android:contentDescription="@string/choose_black"
                android:onClick="@{() -> drawViewModel.pickColor(@color/black)}"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/paintpot_black" />

            <ImageView
                android:id="@+id/btn_draw_setColorBlue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@{((int)drawViewModel.selectedColor)==@color/blue ? @drawable/background : @drawable/background_noborder }"
                android:contentDescription="@string/choose_blue"
                android:onClick="@{() -> drawViewModel.pickColor(@color/blue)}"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/paintpot_blue" />

            <ImageView
                android:id="@+id/btn_draw_setColorRed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@{((int)drawViewModel.selectedColor)==@color/red ? @drawable/background : @drawable/background_noborder }"
                android:contentDescription="@string/choose_red"
                android:onClick="@{() -> drawViewModel.pickColor(@color/red)}"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/paintpot_red" />

            <ImageView
                android:id="@+id/btn_draw_setColorYellow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@{((int)drawViewModel.selectedColor)==@color/yellow ? @drawable/background : @drawable/background_noborder }"
                android:contentDescription="@string/choose_yellow"
                android:onClick="@{() -> drawViewModel.pickColor(@color/yellow)}"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/paintpot_yellow" />

            <ImageView
                android:id="@+id/btn_draw_setColorGreen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@{((int)drawViewModel.selectedColor)==@color/green ? @drawable/background : @drawable/background_noborder}"
                android:contentDescription="@string/choose_green"
                android:onClick="@{() -> drawViewModel.pickColor(@color/green)}"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/paintpot_green" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>


