<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="photoViewModel"
            type="be.hogent.faith.faith.emotionCapture.takePhoto.TakePhotoViewModel" />
        <variable
            name="userViewModel"
            type="be.hogent.faith.faith.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen_take_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <io.fotoapparat.view.CameraView
            android:id="@+id/cameraView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:visibility="@{safeUnbox(photoViewModel.visibilityTakePhoto)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_takePhoto_Photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenOrSaved)}"
            android:contentDescription="@string/take_photo_de_foto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>


        <ImageButton
            android:id="@+id/btn_takePhoto_takePhoto"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/take_photo_neem_foto"
            android:onClick="@{() -> photoViewModel.onTakePhotoButtonClicked()}"
            android:background="@drawable/btn_take_picture"
            android:text="@string/frag_takePhoto_takePhoto"
            android:visibility="@{safeUnbox(photoViewModel.visibilityTakePhoto)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_takePhoto_NotOk"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_return"
            android:contentDescription="@string/cancel"
            android:onClick="@{() -> photoViewModel.onNotOkPhotoButtonClicked()}"
            android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenNotSaved)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btn_flipCamera"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_flip_camera"
            android:contentDescription="@string/cancel"
            android:onClick="@{() -> photoViewModel.onSelfieButtonClicked()}"
            android:visibility="@{safeUnbox(photoViewModel.visibilityTakePhoto)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_takePhoto_Ok"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/save_btn"
            android:contentDescription="@string/ok"
            android:onClick="@{() -> photoViewModel.onOkPhotoButtonClicked()}"
            android:visibility="@{safeUnbox(photoViewModel.visibilityPhotoTakenNotSaved)}"
            android:minWidth="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>